pop ups enabled

--- a/style.css
+++ b/style.css
@@ -135,6 +135,19 @@ a {
   font-size: 20px;
   color: rgb(56, 56, 56);
 }
+.pop {
+  background-color: rgba(0,0,0,.8);
+  /* possibly need to change to fixed, problem with absolute and relative??  */
+  position: absolute;
+  display: none;
+  height: 80vh;
+  width: 85vw;
+  z-index: 20;
+  left: 50%;
+  top: 57%;
+  transform: translate(-50%,-50%);
+  border-radius: 30px;
+}
 
 @media only screen and (min-width:768px) {
     body {
@@ -213,7 +226,7 @@ a {
         margin-bottom: 10px;
     }
     
-  
+
     
 
     
