--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ a {
 .checkout-deets {
   width: 60%;
   color: white;
-  
+  flex-direction: column;
 }
 .about{
   font-size: 20px;
@@ -245,23 +245,38 @@ a {
   
   
  }
-.payment-method {
+ .cartItems{
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  
+  flex-direction: row;
+ }
+.payment-method {
+  display: inline-block;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
 }
 
  .cash-form {
-   display: none;
-   justify-content: center;
-   align-items: center;
+  display: none;
+  justify-content: center;
+   align-items: flex-start;
+   width: 90%;
+   flex-wrap: wrap;
+   flex-direction: column;
  }
 
  .credit-form {
    display: none;
    justify-content: center;
-   align-items: center;
+    align-items: flex-start;
+    width: 90%;
+    flex-wrap: wrap;
+    flex-direction: column;
+ }
+ .total_subtotal {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
  }
 .info {
    color: white;
