--- a/style.css
+++ b/style.css
@@ -223,6 +223,19 @@ a {
   transform: translate(-50%,-50%);
   border-radius: 30px;
 }
+.rpop {
+  background-color: rgb(0, 0, 0);
+  /* possibly need to change to fixed, problem with absolute and relative??  */
+  position: absolute;
+  display: none;
+  height: 100%;
+  width: 90vw;
+  z-index: 20;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  border-radius: 30px;
+}
 .column-style {
    display: flex;
    flex-direction: column;
